[package]
name = "plague"
version = "0.0.0"
authors.workspace = true
publish = false
edition.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
primitive-types.workspace = true
tracing.workspace = true


near-primitives = { path = "../../core/primitives" }
near-crypto = { path = "../../core/crypto" }

